@@ -21,7 +21,6 @@ import com.carrotsearch.randomizedtesting.annotations.ThreadLeakFilters;
 import java.io.ByteArrayInputStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
@@ -67,6 +66,9 @@ public class TikaServerExtractionBackendTest extends SolrTestCaseJ4 {
   @SuppressWarnings("resource")
   @BeforeClass
   public static void startTikaServer() {
+    Assume.assumeFalse(
+        "Skipping on s390x", "s390x".equalsIgnoreCase(System.getProperty("os.arch")));
+
     try {
       tika = new GenericContainer<>("apache/tika:3.2.3.0-full").withExposedPorts(9998);
       tika.start();
@@ -175,7 +177,7 @@ public class TikaServerExtractionBackendTest extends SolrTestCaseJ4 {
   }
 
   private ExtractionRequest newRequest(String file, String contentType, String content) {
-    return newRequest(file, contentType, content, false, Collections.emptyMap());
+    return newRequest(file, contentType, content, false, Map.of());
   }
 
   @Test
